--- a/.github/workflows/release-1.yml
+++ b/.github/workflows/release-1.yml
@@ -156,9 +156,9 @@ jobs:
           # Download and install CMake
           sudo mkdir -p /cmake
           if [ "$(uname -m)" = "x86_64" ] || [ "$(uname -m)" = "amd64" ]; then
-            curl -sSL https://github.com/Kitware/CMake/releases/download/v3.31.10/cmake-3.31.10-linux-x86_64.tar.gz | tar -xz -C /cmake --strip-components=1
+            sudo curl -sSL https://github.com/Kitware/CMake/releases/download/v3.31.10/cmake-3.31.10-linux-x86_64.tar.gz | sudo tar -xz -C /cmake --strip-components=1
           elif [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ]; then
-            curl -sSL https://github.com/Kitware/CMake/releases/download/v3.31.10/cmake-3.31.10-linux-aarch64.tar.gz | tar -xz -C /cmake --strip-components=1
+            sudo curl -sSL https://github.com/Kitware/CMake/releases/download/v3.31.10/cmake-3.31.10-linux-aarch64.tar.gz | sudo tar -xz -C /cmake --strip-components=1
           else
             echo "Unsupported architecture: $(uname -m)"
             exit 1
@@ -172,9 +172,9 @@ jobs:
           # Create distribution package
           sudo mkdir -p dist
           if [ "$(uname -m)" = "x86_64" ] || [ "$(uname -m)" = "amd64" ]; then
-            tar -zcf dist/apple-clang-21-linux-x86_64-gnu-ubuntu-$1.tar.gz -C $INSTALLPREFIX .
+            sudo tar -zcf dist/apple-clang-21-linux-x86_64-gnu-ubuntu-$1.tar.gz -C $INSTALLPREFIX .
           elif [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ]; then
-            tar -zcf dist/apple-clang-21-linux-aarch64-gnu-ubuntu-$1.tar.gz -C $INSTALLPREFIX .
+            sudo tar -zcf dist/apple-clang-21-linux-aarch64-gnu-ubuntu-$1.tar.gz -C $INSTALLPREFIX .
           else
             echo "Unsupported architecture: $(uname -m)"
             exit 1
