Update input types in release workflow
Changed input types for freespace and swapspace from choice to boolean.

--- a/.github/workflows/release-1.yml
+++ b/.github/workflows/release-1.yml
@@ -7,19 +7,13 @@ on:
       freespace:
         description: 'Clear Disk Space'
         required: true
-        type: choice
-        default: no
-        options:
-          - no
-          - yes
+        type: boolean
+        default: false
       swapspace:
         description: 'Add Swap File'
         required: true
-        type: choice
-        default: no
-        options:
-          - no
-          - yes
+        type: boolean
+        default: false
       sdk_14:
         description: 'Build macOS 14 SDKs'
         required: false
