--- a/.github/workflows/prebuilt.yml
+++ b/.github/workflows/prebuilt.yml
@@ -4,6 +4,10 @@ name: Pre-build osxcross
 on:
   workflow_dispatch:
     inputs:
+      appleclang:
+        description: build Apple clang
+        type: boolean
+        default: true
       version:
         description: macOS SDK Version
         type: choice
@@ -78,9 +82,13 @@ jobs:
           update_packager_index: true
           install_ccache: true
           prepend_symlinks_to_path: true
+      - if: ${{ inputs.appleclang }}
+        name: Build Apple Clang
+        run: |
+          UNATTENDED=1 ENABLE_CLANG_INSTALL=1 PORTABLE=1 JOBS=$(nproc) TARGET_DIR=${{ github.workspace }}/osxcross bash ./build_apple_clang.sh
       - name: build osxcross
         run: |
-          UNATTENDED=1 TARGET_DIR=${{ github.workspace }}/osxcross ./build.sh
+          UNATTENDED=1 TARGET_DIR=${{ github.workspace }}/osxcross JOBS=$(nproc) ./build.sh
       - name: archive osxcross
         run: |
           tar -cvf osxcross-${{ inputs.version }}.tar osxcross
