--- a/.github/workflows/prebuilt-test.yml
+++ b/.github/workflows/prebuilt-test.yml
@@ -173,7 +173,7 @@ jobs:
   release-osxcross:
     name: (Draft-)Release
     #if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main'
-    if: inputs.dorelease == 'yes'
+    if: ${{ inputs.dorelease }}
     runs-on: ubuntu-latest
     needs: build-linux-x86-64
     steps:
