--- a/.github/workflows/prebuilt-test.yml
+++ b/.github/workflows/prebuilt-test.yml
@@ -103,7 +103,7 @@ jobs:
           fi
 
           if [ "${{ inputs.sdk_26 }}" == "true" ]; then
-            for v in "26.0" "26.1" "26.2" "26.4"; do
+            for v in "26.0" "26.1" "26.2"; do
               SDK_VERSIONS="${SDK_VERSIONS}${SEPARATOR}\"${v}\""
               SEPARATOR=","
             done
@@ -173,7 +173,7 @@ jobs:
   release-osxcross:
     name: (Draft-)Release
     #if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main'
-    if: inputs.dorelease == 'yes'
+    if: ${{ inputs.dorelease }}
     runs-on: ubuntu-latest
     needs: build-linux-x86-64
     steps:
